2025-12-18T00:42:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20321994782 # 1372
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-18
* notice: last 14d: unq all: 12 102
* notice: prev accum: outdated-unq outdated-all / unq all: 1300 6121 / 1313 6219
* notice: next accum: outdated-unq outdated-all / unq all: 1300 6121 / 1315 6223
* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2025-12-17]

2025-12-17T00:43:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20287631580 # 1370
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-17
* notice: last 14d: unq all: 11 98
* notice: prev accum: outdated-unq outdated-all / unq all: 1299 6120 / 1313 6219
* notice: next accum: outdated-unq outdated-all / unq all: 1300 6121 / 1313 6219
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-02] / []

2025-12-16T12:19:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20267678306 # 1369
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
* notice: last 14d: unq all: 12 99
* notice: prev accum: outdated-unq outdated-all / unq all: 1299 6120 / 1311 6217
* notice: next accum: outdated-unq outdated-all / unq all: 1299 6120 / 1313 6219
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-12-16]

2025-12-16T00:47:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20252583392 # 1368