@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-18T00:42:55Z",
+  "timestamp" : "2025-12-18T12:18:41Z",
   "count_outdated" : 6121,
   "uniques_outdated" : 1300,
-  "count" : 6223,
-  "uniques" : 1315,
+  "count" : 6240,
+  "uniques" : 1317,
   "views" : [
     {
       "timestamp": "2025-12-05T00:00:00Z",
@@ -82,6 +82,15 @@
       "count": 4,
       "count_minmax": [ 4, 4 ],
       "count_decinc": [ 0, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-12-18T00:00:00Z",
+      "count": 17,
+      "count_minmax": [ 17, 17 ],
+      "count_decinc": [ 0, 17 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
