@@ -1,5 +1,5 @@
 {
-  "count": 102,
+  "count": 119,
   "uniques": 12,
   "views": [
     {
@@ -45,6 +45,11 @@
     {
       "timestamp": "2025-12-17T00:00:00Z",
       "count": 4,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-12-18T00:00:00Z",
+      "count": 17,
       "uniques": 2
     }
   ]
